# ORANalyst-flexric-driver

./: .gitignore  README.md  configure_paths.sh  run_flexric_fuzz.sh  run_flexric_fuzz_24h.sh
ORANalyst/O-RAN-SC/oran-input-gen/: BUILD_NOTES.txt  go.mod  main.go
ORANalyst/O-RAN-SC/oran-input-gen/go-fuzz/go-fuzz/asn1_mutator/: mutator.go  shared_mem.go
ORANalyst/O-RAN-SC/oran-input-gen/mutator/e2ap/: subprocess.go
ORANalyst/O-RAN-SC/oran-input-gen/mutator/kpm/: go.mod  subprocess.go
docs/superpowers/plans/: 2026-06-29-flexric-24h-coverage-campaign.md  2026-06-29-flexric-e2-fuzzing-driver.md
docs/superpowers/specs/: 2026-06-29-flexric-24h-coverage-campaign-design.md  2026-06-29-flexric-e2-fuzzing-driver-design.md
flexric/flexric_fuzz_bridge/: CMakeLists.txt  README.md
flexric/flexric_fuzz_bridge/include/: bridge.h  crasher.h  fuzz_ports.h  sctp_client.h
flexric/flexric_fuzz_bridge/src/: crasher.c  fuzz_ports.c  main.c  sctp_client.c
flexric/flexric_fuzz_bridge/test/: test_crasher.c  test_feedback.c  test_inject_read.c
flexric/flexric_fuzz_bridge/tools/: README.md  coverage_sampler.py  crash_collector.py  gcov.dynlist  gcov_flush_preload.c  test_coverage_sampler.py  test_crash_collector.py  test_shim.sh
